--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "private": true,
   "scripts": {
     "build": "slidev build && node rename-code-assets.js",
-    "dev": "slidev --open",
+    "dev": "slidev",
     "export": "slidev export"
   },
   "dependencies": {
     "@slidev/cli": "^0.28.9",
     "@slidev/theme-default": "*",
-    "@slidev/theme-seriph": "*"
+    "@slidev/theme-seriph": "*",
+    "prismjs": "^1.27.0",
+    "sass": "^1.49.9"
   },
   "name": "slidev-playground"
 }
