--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "export": "slidev export"
   },
   "dependencies": {
+    "@mdx-js/rollup": "^2.1.0",
     "@slidev/cli": "^0.28.9",
     "@slidev/theme-default": "*",
     "@slidev/theme-seriph": "*",
+    "markdown-it-attrs": "^4.1.3",
     "prismjs": "^1.27.0",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "vite-plugin-mdx": "^3.5.10"
   },
-  "name": "slidev-playground"
+  "name": "slidev-playground",
+  "type": "module",
+  "devDependencies": {
+    "@gerhobbelt/markdown-it-code-snippet-enhanced": "^2.0.1-2",
+    "markdown-it-shiki": "^0.4.0"
+  }
 }
